Got animation working

--- a/WebGL-Pixi/public/index.html
+++ b/WebGL-Pixi/public/index.html
@@ -10,9 +10,11 @@
       <script src='js/pixi.js'></script>
       <script type="text/javascript" src="js/jquery-1.12.3.js"></script>
       <script src="js/pixi-spine.js"></script>
-      <script src="js/index.js"></script>
       //<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
       <script src="js/Tween.js"></script>
       <script src="js/RequestAnimationFrame.js"></script>
+      
+      <!-- Must be the last one -->
+      <script src="js/index.js"></script>
   </body>
 </html>
